--- a/index.html
+++ b/index.html
@@ -4,110 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.">
     <title>Only Edits</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: ;
-            padding: ;
-            background-color: #000000;
-        }
-
-        header {
-            background: #c42222;
-            color: #ffffff;
-            padding: 10px ;
-            text-align: center;
-        }
-
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-        }
-
-        article {
-            background: #ffffff;
-            margin: 20px ;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow:   10px rgba(, , , .1);
-        }
-
-        h1 {
-            color: #8d9ea8;
-        }
-        h2 {
-            color: #35424a;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px ;
-            background: #35424a;
-            color: #ffffff;
-            position: relative;
-            bottom: ;
-            width: 100%;
-        }
-
-        .nav {
-            margin: 20px ;
-            text-align: center;
-        }
-
-        .nav a {
-            margin:  15px;
-            text-decoration: none;
-            color: #ffffff;
-            padding: 5px 10px;
-            background: #e8491d;
-            border-radius: 5px;
-        }
-
-        .nav a:hover {
-            background: #8a9fac;
-        }
-    </style>
+    <link rel="stylesheet" href="sytle-index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #242424;">
 
 <header>
-    <h1>Bem-vindo ao Only Edits</h1>
-    <nav class="nav">
-        <a href="#">Home</a>
-        <a href="#">Modelos</a>
-        <a href="#">Editores</a>
-    </nav>
+       <nav class="navbar navbar-expand-lg navbar-orange bg-danger fixed-top">
+        <a class="navbar-brand" style="font-family: 'Cedarville Cursive', cursive; font-size: 25px;">Only Edits</a>
+        <button class="navbar-toggler" data-target="#navbar" data-toggle="collapse" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-dark" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="#" tabindex="-1" aria-disabled="true">EDITORES</a>
+                </li>
+            </ul>
+        </div>
+       </nav>
+       <br>
 </header>
 
-<div class="container">
-    <article>
-        <h2>Título do Post 1</h2>
-        <p><em>Publicado em 1 de Janeiro de 2023</em></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non diam a lectus tincidunt facilisis. Nulla facilisi.</p>
-        <a href="index.html">Leia mais...</a>
-    </article>
+<div class="main col-12">
+<div class="row col-12">
 
-    <article>
-        <h2>Título do Post 2</h2>
-        <p><em>Publicado em 2 de Janeiro de 2023</em></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu felis non justo aliquam scelerisque.</p>
-        <a href="#">Leia mais...</a>
-    </article>
 
-    <article>
-        <h2>Título do Post 3</h2>
-        <p><em>Publicado em 3 de Janeiro de 2023</em></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac urna vel justo venenatis congue.</p>
-        <a href="#">Leia mais...</a>
-    </article>
+    <div class="api col-4">
+    <div class="card">
+        <div class="card-body bg-danger" style="text-align: center;">
+            <h5 class="card-title  text-white">Destaques da Semana</h5>
+            <hr>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi non ea ullam possimus cumque eaque dolorum, mollitia, doloribus maiores odit aperiam, magni quos ratione explicabo sequi in ab quidem?</p>
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        
+        <div class="card-body bg-danger" style="text-align: center;">
+            <h5 class="card-title  text-white center">Threanding Topics</h5>
+            <hr>
+            <p id="th1" class="th1 text-white card-text"><a href="#" class="thrends1 text-white">#Casal</a>  300K</p>
+            <p id="th2" class="th2 text-white card-text"><a href="#" class="thrends2 text-white">#Fisting</a>  287K</p>
+            <p id="th3" class="th3 text-white card-text"><a href="#" class="thrends3 text-white">#Solo</a>  283K</p>
+
+        </div>
+    </div>
+    <br>
+</div>
+<div class="postagens col-8">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Title 1</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi non ea ullam possimus cumque eaque dolorum, mollitia, doloribus maiores odit aperiam, magni quos ratione explicabo sequi in ab quidem?</p>
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Title 2</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi non ea ullam possimus cumque eaque dolorum, mollitia, doloribus maiores odit aperiam, magni quos ratione explicabo sequi in ab quidem?</p>
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Title 3</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla excepturi non ea ullam possimus cumque eaque dolorum, mollitia, doloribus maiores odit aperiam, magni quos ratione explicabo sequi in ab quidem?</p>
+        </div>
+    </div>
+</div>
+</div>
 </div>
 
-<footer>
+<footer class="fixed-bottom col-12">
     <p>&copy; 2024 CWS. Todos os direitos reservados.</p>
 </footer>
 
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </html>
